<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="horizontal"
    android:weightSum="12"
    android:padding="1dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/ic_username"
                android:scaleType="fitCenter"/>

            <EditText
                android:id="@+id/firstname"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/ic_bubble"
                android:scaleType="fitCenter"/>
            <Spinner
                android:id="@+id/language"
                android:prompt="@string/language_prompt"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/lang_list"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:spinnerMode="dialog" style="@style/Widget.AppCompat.Spinner.Underlined"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/ic_phone"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone"
                android:maxLength="10"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="15sp"
                android:inputType="phone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                />

           <Spinner
                android:id="@+id/state"
                android:prompt="@string/state_prompt"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/state_list"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:spinnerMode="dialog" style="@style/Widget.AppCompat.Spinner.Underlined"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:scaleType="fitCenter"/>

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/ic_email"
                android:scaleType="fitCenter"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/ic_marker"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="0dp"
                />
           <!-- <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="City"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="15sp"/>-->

            <Spinner
                android:id="@+id/spn_city"
                android:prompt="@string/city_prompt"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>


